# dse.ncodec

./: .gitignore  Makefile  NOTICE  README.md
.github/workflows/: super-linter.yml
doc/: Makefile
doc/content/apis/ncodec/: index.md
doc/content/apis/ncodec/examples/: ncodec_api.c
doc/yed/: ncodec-simple-arch.graphml
dse/: platform.h
dse/ncodec/: CMakeLists.txt  Makefile  codec.c  codec.h
dse/ncodec/codec/ab/: CMakeLists.txt  codec.c  codec.h  frame_fbs.c  pdu_fbs.c
dse/ncodec/codec/ab/flexray/: engine.c  fbs.c  flexray.c  flexray.h  state.c
dse/ncodec/examples/: CMakeLists.txt
dse/ncodec/examples/ab-codec-fmi/: CMakeLists.txt  README.md  fmu2.c  main.c  ncodec.c
dse/ncodec/examples/codec/: CMakeLists.txt  README.md  codec.c  dynamic.c  example.c  static.c
dse/ncodec/examples/flexray/: CMakeLists.txt  README.md  board_stub.c  board_stub.h  bridge.c  ecu_stub.c  ecu_stub.h  flexray_anycpu.c  flexray_anycpu.h  ncodec.c  startup.c  txrx.c  wup.c
dse/ncodec/examples/fmpy/: CMakeLists.txt  README.md  ncodec.c  simulation.py
dse/ncodec/examples/python_ncodec/: example_interface_usage.py  setup.py  test_can_codec_operation.py  test_pdu_codec_operation.py
dse/ncodec/examples/python_ncodec/AutomotiveBus/: __init__.py  can.py  codec_interface.py  pdu.py
dse/ncodec/examples/python_ncodec/AutomotiveBus/Register/Ethernet/: Frame.py  TimeSpec.py
dse/ncodec/examples/python_ncodec/AutomotiveBus/Register/FlexRay/: FlexrayStatus.py  FrameIndicatorBits.py  TimeSpec.py
dse/ncodec/examples/python_ncodec/AutomotiveBus/Signal/Channel/: MessageType.py
dse/ncodec/interface/: frame.h  pdu.h
dse/ncodec/schema/abs/register/: can_builder.h  can_reader.h  can_verifier.h  ethernet_builder.h  ethernet_reader.h  ethernet_verifier.h  flexray_builder.h  flexray_reader.h  flexray_verifier.h
dse/ncodec/schema/abs/signal/: channel_builder.h  channel_reader.h  channel_verifier.h
dse/ncodec/schema/abs/stream/: flatbuffers_common_builder.h  frame_builder.h  frame_reader.h  frame_verifier.h  pdu_builder.h  pdu_reader.h  pdu_verifier.h
dse/ncodec/stream/: ascii85.c  buffer.c  stream.h
extra/python/: .gitignore  README.md  pyproject.toml
extra/python/src/AutomotiveBus/Register/Can/: BufferDirection.py  BufferStatus.py  BusState.py  CanStatus.py  Frame.py  FrameType.py  MessageTiming.py  MetaFrame.py  RegisterFile.py  TimeSpec.py
extra/python/src/AutomotiveBus/Register/Ethernet/: BufferDirection.py  BufferStatus.py  BusSync.py  EthernetStatus.py  MessageTiming.py  MetaFrame.py  RegisterFile.py
extra/python/src/AutomotiveBus/Register/FlexRay/: BufferDirection.py  BufferStatus.py  BusSync.py  Frame.py  FrameChannel.py  MessageTiming.py  MetaFrame.py  RegisterFile.py
extra/python/src/AutomotiveBus/Signal/Channel/: ChannelMessage.py  SignalIndex.py  SignalLookup.py  SignalRead.py  SignalValue.py  SignalWrite.py
extra/python/src/AutomotiveBus/Stream/Frame/: CanFrame.py  CanFrameType.py  Frame.py  FrameTypes.py  Stream.py  Timing.py
extra/python/src/AutomotiveBus/Stream/Pdu/: CanFrameType.py  CanMessageFormat.py  CanMessageMetadata.py  DoIpMetadata.py  IpAddr.py  IpAddressV6.py  IpMessageMetadata.py  IpProtocol.py  IpV4.py  IpV6.py  Pdu.py  SocketAdapter.py  SomeIpMetadata.py  Stream.py  TransportMetadata.py
extra/python/src/ncodec/: __init__.py  can.py  codec_interface.py  mimetype.py  pdu.py
extra/python/tests/: __init__.py  test_can.py  test_interface.py  test_pdu.py
tests/cmocka/: CMakeLists.txt  Makefile
tests/cmocka/codec/ab/: CMakeLists.txt  __test__.c  test_can_fbs.c  test_codec.c  test_pdu_fbs.c
tests/cmocka/codec/ab/frame/: CMakeLists.txt  __test__.c  test_can_fbs.c
tests/cmocka/codec/ab/pdu/: CMakeLists.txt  __test__.c  flexray_harness.c  flexray_harness.h  test_pdu.c  test_pdu_can.c  test_pdu_flexray.c  test_pdu_flexray_engine.c  test_pdu_flexray_state.c  test_pdu_ip.c  test_pdu_struct.c
